# faithgate

./: .gitignore  DESIGN.md  IDEAS.md  LICENSE  README.md  ROADMAP.md  action.yml  pyproject.toml
.github/workflows/: eval-gate.yml  licenses.yml  release.yml  tests.yml
examples/: demo_gate.py
examples/rag_app/: README.md  app.py  retriever.py  suite_baseline.jsonl  suite_candidate.jsonl  suite_regressed.jsonl
examples/rag_app/docs/: asteroid-belt.md  comets.md  earth.md  europa.md  hubble.md  iss.md  jupiter.md  mars-rovers.md  mars.md  mercury-mission.md  mercury.md  moon.md  neptune.md  pluto.md  saturn.md  sun.md  titan.md  uranus.md  venus.md  voyager.md
faithgate/: __init__.py  keys.py  promote.py
faithgate/calibrate/: calibrate.py
faithgate/calibrate/goldens/: faithfulness.jsonl
faithgate/gate/: cli.py  diff.py
faithgate/ingest/: decorator.py  openinference.py
faithgate/panel/: server.py
faithgate/score/: judges.py  scorer.py  worker.py
faithgate/store/: db.py  schema.sql
tests/: test_calibrate.py  test_diff.py  test_gate_cli.py  test_ingest.py  test_promote.py  test_ragas_contract.py  test_run.py  test_scorer.py  test_store.py
